example/test-network-k8s/kube/cli-command.yaml
# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: cli-command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cli-command
  template:
    metadata:
      labels:
        app: cli-command
    spec:
      containers:
        - name: cli-command
          imagePullPolicy: IfNotPresent
          image: docker.io/library/${CLI_COMMAND_IMAGE_NAME}:${IMAGE_VERSION}
          resources:
            requests:
              memory: "200Mi"
              cpu: "500m"
          command:
            - sh
            - -c
            - |
              tail -f /dev/null
