example/test-network-k8s/kube/placement-center.yaml
# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: meta-service-hs
  labels:
    app: pc
spec:
  ports:
    - port: 1228
      name: grpc
    - port: 1227
      name: http
  clusterIP: None
  selector:
    app: meta-service
---
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: meta-service-cs
  labels:
    app: pc
spec:
  type: NodePort
  ports:
    - port: 2181
      targetPort: 2181
      name: client
      nodePort: 32181
  selector:
    app: meta-service
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ${NAMESPACE}
  name: meta-service
spec:
  serviceName: meta-service-hs
  replicas: 3
  selector:
    matchLabels:
      app: meta-service
  template:
    metadata:
      labels:
        app: meta-service
    spec:
      containers:
        - name: meta-service
          imagePullPolicy: IfNotPresent
          image: docker.io/library/${META_SERVICE_IMAGE_NAME}:${IMAGE_VERSION}
          resources:
            requests:
              memory: "200Mi"
              cpu: "500m"
          ports:
            - containerPort: 1228
              name: grpc
            - containerPort: 1227
              name: http
          volumeMounts:
            - name: datadir
              mountPath: /robustmq/robust-data/meta-service/data
              subPath: meta-service/data
            - name: datadir
              mountPath: /robustmq/robust-data/meta-service/logs
              subPath: meta-service/logs
            - name: config
              mountPath: /robustmq/config/cluster/meta-service/node.toml
              subPath: config.toml
      volumes:
        - name: config
          configMap:
            name: meta-service-config
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
