example/test-network-k8s/kube/mqtt-server-ingress.yaml
# Copyright 2023 RobustMQ Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-server-ingress
  namespace: robustmq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mqtt-server.local
      http:
        paths:
          - path: /http
            pathType: Prefix
            backend:
              service:
                name: mqtt-server-cs
                port:
                  number: 9981
          - path: /mqtt
            pathType: Prefix
            backend:
              service:
                name: mqtt-server-cs
                port:
                  number: 9982
